# sample-claude-tag-in-lark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  samconfig.toml  template.yaml
docs/: DEPLOY_RUNBOOK.md  REQUIREMENTS.md  architecture.drawio  architecture.py  数据存储与安全.md
functions/consolidator/: consolidator.py
functions/dispatcher/: dispatcher.py
functions/gardener/: gardener.py
functions/lark-webhook/: event_handlers.py  handler.py
infra/agentcore/: README.md  create_memory.py
larkclaudetag/agentcore/: agentcore.json  aws-targets.json
larkclaudetag/agentcore/cdk/: package-lock.json  package.json
larkclaudetag/agentcore/cdk/lib/: cdk-stack.ts
larkclaudetag/app/larktag/: Dockerfile  lark_client.py  main.py  mcp_config.py  memory.py  prompts.py  pyproject.toml  runtime_config.py  schedule.py  skill_store.py  tools.py
larkclaudetag/app/larktag/skills/: README.md
layers/lark-shared/: lark_api.py  lark_auth.py  lark_secrets.py  platform_secrets.py  requirements.txt
tests/: smoke_litellm.py
